# mvw

./: .clang-format  .gitignore  .gitmodules  BUILD.gn  LICENSE  mvw.sln  readme.md
app/: BUILD.gn  DXApp.cpp  DXApp.h  Window.cpp  Window.h  main.cpp
d3d11/: AnimationManager.cpp  AnimationManager.h  App.cpp  App.h  BUILD.gn  Camera.cpp  Camera.h  DirectXBase.cpp  DirectXBase.h  GPUMesh.cpp  GPUMesh.h  Helper.h  Object.cpp  Object.h  Pass.cpp  Pass.h  PixelShader.hlsl  VertexShader.hlsl  main.cpp
d3d12/: Animation.cpp  Animation.h  BUILD.gn  Camera.cpp  Camera.h  ColorPassShaders.hlsl  ConstantBufferAllocator.cpp  ConstantBufferAllocator.h  D3D12Renderer.cpp  D3D12Renderer.h  DXApp.cpp  DXApp.h  DXWindow.cpp  DXWindow.h  DescriptorHeapManagers.cpp  DescriptorHeapManagers.h  ImageLoader.cpp  ImageLoader.h  MessageQueue.cpp  MessageQueue.h  Model.cpp  Model.h  ObjFileLoader.cpp  ObjFileLoader.h  Object.cpp  Object.h  Pass.cpp  Pass.h  PassThroughShaders.hlsl  PerFrameAllocator.cpp  PerFrameAllocator.h  RenderTarget.cpp  RenderTarget.h  ResourceGarbageCollector.cpp  ResourceGarbageCollector.h  ResourceHelper.cpp  ResourceHelper.h  Scene.cpp  Scene.h  ShadowMap.cpp  (+18 more)
d3d12/shaders/: ColorPassShaders.hlsl  ShadowMapShaders.hlsl  Townscaper.hlsl  Townscaper_Buildings.hlsl  Townscaper_ShadowMap.hlsl  Townscaper_Windows.hlsl
utils/: BUILD.gn  MessageQueue.cpp  MessageQueue.h  Timer.cpp  Timer.h
vs/: CommonProperties.props  NinjaCommands.props  NinjaProjectTargets.props
vs/app/: app.filters  app.vcxproj
vs/d3d11/: d3d11.vcxproj  d3d11.vcxproj.filters
vs/d3d12/: d3d12.vcxproj  d3d12.vcxproj.filters
vs/utils/: utils.vcxproj
vs/windows/: windows.vcxproj  windows.vcxproj.filters
windows/: BUILD.gn
