executable("d3d11_renderer") {
  libs = [ "d3d11.lib", "dxgi.lib", "d2d1.lib", "dwrite.lib", "d3dcompiler.lib", "user32.lib", "Ole32.lib" ]

  deps = [":d3d11_renderer_shaders"]

  sources = [
    "AnimationManager.cpp",
    "AnimationManager.h",
    "App.cpp",
    "App.h",
    "Camera.cpp",
    "Camera.h",
    "DirectXBase.cpp",
    "DirectXBase.h",
    "GPUMesh.cpp",
    "GPUMesh.h",
    "Helper.h",
    "main.cpp",
    "Object.cpp",
    "Object.h",
    "Pass.cpp",
    "Pass.h",
  ]
}

copy("d3d11_renderer_shaders") {
  sources = [
    "PixelShader.hlsl",
    "VertexShader.hlsl",
  ]

  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}