executable("d3d12_renderer") {
  libs = [ "user32.lib", "Ole32.lib", "d3d12.lib", "dxgi.lib", "d3dcompiler.lib", "dxguid.lib" ]

  deps = [":d3d12_renderer_shaders"]

  sources = [
    "Camera.cpp",
    "Camera.h",
    "comhelper.h",
    "d3dx12.h",
    "DXApp.cpp",
    "DXApp.h",
    "ImageLoader.cpp",
    "ImageLoader.h",
    "main.cpp",
    "MessageQueue.cpp",
    "MessageQueue.h",
    "Model.cpp",
    "Model.h",
    "Pass.cpp",
    "Pass.h",
    "ResourceGarbageCollector.cpp",
    "ResourceGarbageCollector.h",
    "ResourceHelper.cpp",
    "ResourceHelper.h",
    "Timer.cpp",
    "Timer.h",
    "WindowProxy.cpp",
    "WindowProxy.h",
    "WindowTarget.cpp",
    "WindowTarget.h",
  ]
}

copy("d3d12_renderer_shaders") {
  sources = [
    "PassThroughShaders.hlsl",
    "SimpleCameraAndPositioning.hlsl",
  ]

  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}