executable("d3d12_renderer") {
  libs = [ "user32.lib", "Ole32.lib", "d3d12.lib", "dxgi.lib", "d3dcompiler.lib", "dxguid.lib" ]

  deps = [":d3d12_renderer_shaders"]

  sources = [
    "Animation.cpp",
    "Animation.h",
    "Camera.cpp",
    "Camera.h",
    "comhelper.h",
    "ConstantBufferAllocator.cpp",
    "ConstantBufferAllocator.h",
    "D3D12Renderer.cpp",
    "D3D12Renderer.h",
    "d3dx12.h",
    "DescriptorHeapManagers.cpp",
    "DescriptorHeapManagers.h",
    "DXApp.cpp",
    "DXApp.h",
    "ImageLoader.cpp",
    "ImageLoader.h",
    "main.cpp",
    "MessageQueue.cpp",
    "MessageQueue.h",
    "Model.cpp",
    "Model.h",
    "Object.cpp",
    "Object.h",
    "ObjFileLoader.cpp",
    "ObjFileLoader.h",
    "Pass.cpp",
    "Pass.h",
    "ResourceGarbageCollector.cpp",
    "ResourceGarbageCollector.h",
    "ResourceHelper.cpp",
    "ResourceHelper.h",
    "Scene.cpp",
    "Scene.h",
    "TextureResources.cpp",
    "TextureResources.h",
    "Timer.cpp",
    "Timer.h",
    "WindowProxy.cpp",
    "WindowProxy.h",
    "WindowSwapChain.cpp",
    "WindowSwapChain.h",
  ]
}

copy("d3d12_renderer_shaders") {
  sources = [
    "shaders/ColorPassShaders.hlsl",
    "shaders/ShadowMapShaders.hlsl",
    "shaders/Townscaper_Buildings.hlsl",
    "shaders/Townscaper_Windows.hlsl",
  ]

  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}