static_library("d3d12_renderer") {
  libs = [ "d3d12.lib", "dxgi.lib", "d3dcompiler.lib", "dxguid.lib" ]

  deps = [":d3d12_renderer_shaders", "//utils:utils"]

  sources = [
    "Animation.cpp",
    "Animation.h",
    "Camera.cpp",
    "Camera.h",
    "ConstantBufferAllocator.cpp",
    "ConstantBufferAllocator.h",
    "D3D12Renderer.cpp",
    "D3D12Renderer.h",
    "d3dx12.h",
    "DescriptorHeapManagers.cpp",
    "DescriptorHeapManagers.h",
    "ImageLoader.cpp",
    "ImageLoader.h",
    "Model.cpp",
    "Model.h",
    "Object.cpp",
    "Object.h",
    "ObjFileLoader.cpp",
    "ObjFileLoader.h",
    "Pass.cpp",
    "Pass.h",
    "ResourceGarbageCollector.cpp",
    "ResourceGarbageCollector.h",
    "ResourceHelper.cpp",
    "ResourceHelper.h",
    "Scene.cpp",
    "Scene.h",
    "TextureResources.cpp",
    "TextureResources.h",
    "WindowSwapChain.cpp",
    "WindowSwapChain.h",
  ]
}

copy("d3d12_renderer_shaders") {
  sources = [
    "shaders/ColorPassShaders.hlsl",
    "shaders/ShadowMapShaders.hlsl",
    "shaders/Townscaper.hlsl",
    "shaders/Townscaper_ShadowMap.hlsl",
  ]

  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}